--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/slick.css">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/main.css">
 
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script src="./js/main.js"></script>
 </head>
@@ -122,56 +125,202 @@
                 <h2>자주찾는 메뉴</h2>
                 <div class="inner">
                     <ul>
-                        <li>
+                        <li data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000">
                             <a href="">
-                                <img src="./img/n2.svg" alt="">
+                                <figure>
+                                    <img src="./img/n2.svg" alt="">
+                                </figure>
                                 <p>채용정보</p>
                             </a>
+
                         </li>
-                        <li>
+                        <li data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
+                            data-aos-delay="300">
                             <a href="">
-                                <img src="./img/n5.svg" alt="">
+                                <figure>
+                                    <img src="./img/n5.svg" alt="">
+                                </figure>
                                 <p>고객의소리</p>
                             </a>
+
                         </li>
-                        <li>
+                        <li data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
+                            data-aos-delay="500">
                             <a href="">
-                                <img src="./img/n9.svg" alt="">
+                                <figure>
+                                    <img src="./img/n9.svg" alt="">
+                                </figure>
                                 <p>정보공개</p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
+                            data-aos-delay="700">
                             <a href="">
-                                <img src="./img/n4.svg" alt="">
+                                <figure>
+                                    <img src="./img/n4.svg" alt="">
+                                </figure>
                                 <p>조달입찰</p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
+                            data-aos-delay="900">
                             <a href="">
-                                <img src="./img/n3.svg" alt="">
+                                <figure>
+                                    <img src="./img/n3.svg" alt="">
+                                </figure>
                                 <p>동반성장</p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
+                            data-aos-delay="1100">
                             <a href="">
-                                <img src="./img/n11.svg" alt="">
+                                <figure>
+                                    <img src="./img/n11.svg" alt="">
+                                </figure>
                                 <p>부패추방센터</p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
+                            data-aos-delay="1300">
                             <a href="">
-                                <img src="./img/n7.svg" alt="">
+                                <figure>
+                                    <img src="./img/n7.svg" alt="">
+                                </figure>
                                 <p>촬영신청</p>
                             </a>
                         </li>
                     </ul>
                 </div>
+            </section>
 
+            <section id="news">
+                <div class="bg" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
+                    data-aos-delay="100"></div>
+                <div class="inner" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
+                    data-aos-delay="300">
+                    <div class="news_tab">
+                        <strong>전체</strong>
+                        <span>공지사항</span>
+                        <span>보도자료</span>
+                    </div>
+                    <ul>
+                        <li>
+                            <h3>보도자료</h3>
+                            <a href="">
+                                <p>코레일, 설 대수송 기간 <20~24일> 특별교통대책 시행</p>
+                            </a>
+                            <span>2023-01-19</span>
+                        </li>
+                        <li>
+                            <h3>보도자료</h3>
+                            <a href="">
+                                <p>코레일, 설 맞아 이웃 나눔활동 펼쳐</p>
+                            </a>
+                            <span>2023-01-17</span>
+                        </li>
+                        <li>
+                            <h3>보도자료</h3>
+                            <a href="">
+                                <p>“코레일톡으로 관광택시 예약하고 지역 명소 여행해요”</p>
+                            </a>
+                            <span>2023-01-13</span>
+                        </li>
+                        <li>
+                            <h4>공지사항</h4>
+                            <a href="">
+                                <p>신경주역 구내식당 위탁운영사업자 모집 공고</p>
+                            </a>
+                            <span>2023-01-13</span>
+                        </li>
+                        <li>
+                            <h4>공지사항</h4>
+                            <a href="">
+                                <p>개인정보 목적 외 이용 및 제3자 제공 대장 공고</p>
+                            </a>
+                            <span>2023-01-05</span>
+                        </li>
+                        <li>
+                            <h4>공지사항</h4>
+                            <a href="">
+                                <p>대전철도차량정비단 구내식당 위탁운영업체 선정 재모집 공고(~23.1.5. 17:00)</p>
+                            </a>
+                            <span>2022-12-30</span>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section id="Career">
+                <div class="inner" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000"
+                    data-aos-delay="800">
+                    <div class="left_img" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
+                        data-aos-duration="1000" data-aos-delay="1000">
+                        <a href=""><img src="./img/20220317100030435_9bzf.png" alt=""></a>
+                    </div>
+                    <div class="right_img">
+                        <img src="./img/rowgroup5_bg.png" alt="">
+
+                        <h2>Career</h2>
+                        <p>한국철도공사와 함께 미래를 설계 할 인재를 기다립니다.</p>
+                        <div class="line"></div>
+                    </div>
+                    <div class="career_list">
+                        <a href="">
+                            채용공고
+                        </a>
+                        <a href="">
+                            인재상
+                        </a>
+                        <a href="">
+                            인사관리
+                        </a>
+                    </div>
+                </div>
             </section>
         </main>
 
         <footer id="footer">
+            <div class="inner">
+                <div class="top_footer">
+                    <div class="left_box">
+                        <a href=""><span class="span01">개인정보처리방침</span></a>
+                        <a href=""><span>이메일무단수집거부</span></a>
+                        <a href=""><span>저작권정책</span></a>
+                    </div>
+                    <div class="icon_box">
+                        <a href=""><i class="xi-youtube-play"></i></a>
+                        <a href=""><i class="xi-facebook"></i></a>
+                        <a href=""><i class="xi-instagram"></i></a>
+                        <a href=""><i class="xi-bing"></i></a>
+                        <a href=""><i class="xi-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="footer_info">
 
+                    <div class="left_box">
+                        <figure>
+                            <img src="./img/footer_logo.png" alt="">
+                        </figure>
+                        <div class="text_box">
+                            <div>
+                                <span>상호 : 한국철도공사</span>
+                                <span>대표자 : 나희승</span>
+                                <span>사업자등록 : 314-82-10024</span>
+                                <span>통신판매업신고 : 대전 동구-0233호</span>
+                            </div>
+                            <div>
+                                <span>34618 대전광역시 동구 중앙로 240</span>
+                                <span>고객센터 : 1544-7788</span>
+                                <span>대표전화 : 042-472-5000</span>
+                            </div>
+                            <div>
+                                <span>COPYRIGHT &copy; KOREA RAILROAD. ALL RIGHTS RESERVED.</span>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
 
         </footer>
 
