--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                     </h1>
                     <div class="gnb">
                         <ul>
-                            <li><a href="">공사소개</a></li>
+                            <li><a href="./sub_pg.html">공사소개</a></li>
                             <li><a href="">정보공개</a></li>
-                            <li><a href="">ESG경영</a></li>
+                            <li><a href="./sub_pg03.html">ESG경영</a></li>
                             <li><a href="">고객참여</a></li>
                             <li><a href="">주요사업</a></li>
                             <li><a href="">홍보센터</a></li>
